[project]
name = "scanner"
version = "0.1.0"
description = "Funding-rate and basis anomaly scanner for Crypto Perp-Perp arbitrage"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4",
    "duckdb>=1.1",
    "pyarrow>=17",
    "pandas>=2.2",
    "tomli>=2.0; python_version<'3.11'",
    "httpx>=0.27",
    "streamlit>=1.39",
    "plotly>=5.24",
]

[project.scripts]
scanner = "scanner.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scanner"]
